...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_item_main"
            tools:text="phil@gmail.com" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton_item_delete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_bin" />

...
